--- a/mechan.js/package.json
+++ b/mechan.js/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mechan",
-  "version": "0.0.1",
+  "name": "mechan.js",
+  "version": "0.0.0",
   "description": "API - Extension for discord.js",
   "main": "./src/index.js",
   "author": {
