--- a/mechan.js Example/package.json
+++ b/mechan.js Example/package.json
@@ -4,7 +4,7 @@
   "description": "Mechan Example",
   "main": "app.js",
   "author": {
-    "name": "Duste"
+    "name": "DusterTheFirst"
   },
   "dependencies": {}
 }
