--- a/mechan.js/package.json
+++ b/mechan.js/package.json
@@ -7,7 +7,8 @@
     "name": "DusterTheFirst"
   },
   "dependencies": {
-    "discord.js": "^11.1.0"
+    "@types/node": "^8.0.32",
+    "discord.js": "^11.2.1"
   },
   "types": "./src/index.d.ts"
 }
