--- a/src/package.json
+++ b/src/package.json
@@ -18,6 +18,6 @@
     "@types/node": "^8.0.32"
   },
   "scripts": {
-    "prepublish": "tsc -p ./tsconfig.json"
+    "prepare": "tsc -p ./tsconfig.json"
   }
 }
